<resources>
    <string name="app_name">IndusTechApp</string>
    <string name="LoginActivityDialouge">INDUSTECH APP LOGIN</string>
    <string name="MainActivityDialogue">WELCOME TO THE INDUSTECH APP</string>
    <string name="MainActivityDialogue2">Please Choose An Option Below</string>
    <string name="ScanButtonText">Scan</string>
    <string name="DataButtonText">Data</string>
    <string name="RtvButtonText">Real Time Value</string>
    <string name="LoginButton">CLICK TO LOGIN</string>
    <string name="ScanActivityHeader">SCAN ACTIVITY</string>
    <string name="ClickToScanText">click to scan</string>
    <string name="BackButtonText">BACK</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="DataActivityHeader">DATA ACTIVITY</string>
    <string name="RTVActivityHeader">REAL TIME VALUES</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="temp">Temperature:</string>
    <string name="voltage">Voltage:</string>
    <string name="error">Error:</string>
    <string name="mach1">Machine 1</string>
    <string name="logindialouge2">Please Enter Your Username and Password.</string>
    <string name="fetching">fetching...</string>
    <string name="emi">Enter Machine ID</string>
    <string name="mid">"ID: </string>
    <string name="search">Search</string>

</resources>
