<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.humber.industech.industechapp.MainActivity"
    android:background="@drawable/backgroundwallpaper">

    <Button
        android:text="@string/ScanButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:id="@+id/ScanBtn"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/RtvButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RtvBtn"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/DataBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/DataButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/DataBtn"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/ScanBtn"
        android:layout_alignStart="@+id/ScanBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainActivityDialogue"
        android:id="@+id/textView"
        android:layout_marginTop="37dp"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/MainActivityDialogue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

</RelativeLayout>
