<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rtv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.humber.industech.industechapp.RtvActivity"
    android:background="@drawable/backgroundwallpaper">

    <TextView
        android:text="@string/RTVActivityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5" />

    <TextView
        style="@style/textviewsdialouge"
        android:text="@string/mach1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp"
        android:id="@+id/textView8" />

    <TextView
        style="@style/textviewsdialouge"
        android:text="@string/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="12dp"
        android:id="@+id/textView9" />

    <TextView
        style="@style/textviewsdialouge"
        android:text="@string/voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_marginTop="14dp"
        android:id="@+id/textView10" />

    <TextView
        style="@style/textviewsdialouge"
        android:text="@string/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginTop="13dp"
        android:id="@+id/textView11" />

    <TextView
        android:hint="@string/fetching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignStart="@+id/textView5"
        android:id="@+id/textView12" />

    <TextView
        android:hint="@string/fetching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignStart="@+id/textView12"
        android:id="@+id/textView13" />

    <TextView
        android:hint="@string/fetching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignEnd="@+id/textView13"
        android:id="@+id/textView14" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/emi"
        android:ems="10"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:id="@+id/editText3" />

    <TextView
        style="@style/textviewsdialouge"
        android:text="@string/voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/fetching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/textView18"
        android:layout_below="@+id/textView17"
        android:layout_alignEnd="@+id/textView14" />

    <TextView
        style="@style/textviewsdialouge"
        android:text="@string/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:layout_alignBaseline="@+id/textView18"
        android:layout_alignBottom="@+id/textView18"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/fetching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView24"
        android:layout_alignStart="@+id/textView18" />

    <TextView
        style="@style/textviewsdialouge"
        android:text="@string/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView21"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/fetching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/textView17"
        android:layout_below="@+id/textView16"
        android:layout_alignStart="@+id/textView16" />

    <TextView
        style="@style/textviewsdialouge"
        android:text="@string/mid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <Button
        style="@style/buttons"
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sbutton"
        android:layout_alignTop="@+id/editText3"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/fetching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView25"
        android:layout_alignBaseline="@+id/textView24"
        android:layout_alignBottom="@+id/textView24"
        android:layout_alignStart="@+id/textView16" />


</RelativeLayout>
